<resources>
    <string name="app_name">HiringApps2</string>
    <string name="welcome_to">Welcome to</string>
    <string name="hiring_application">Hiring Application</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="we_need_a_few_detail_to_get_your_account_ready">We need a few detail to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="wahyu">Wahyu</string>
    <string name="last_name">Last Name</string>
    <string name="kurniawan">Kurniawan</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="projects">Projects</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_on_board_fragment_image">first on board fragment image</string>
    <string name="first_on_board_fragment_tittle">Stand Out</string>
    <string name="first_on_board_fragment_description">make yourself stand out with an attractive profile view</string>
    <string name="next">Next</string>
    <string name="second_on_board_image">second on board image</string>
    <string name="second_on_board_fragment_tittle">Get A Job</string>
    <string name="second_on_board_fragment_description">Get hired for a job directly through the app</string>
    <string name="third_on_board_image">third on board image</string>
    <string name="third_on_board_fragment_tittle">Find work</string>
    <string name="third_on_board_fragment_description">Find work that fits your location, skills and schedule</string>
    <string name="finish">Finish</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="simpan">Simpan</string>
    <string name="sex">Sex</string>
    <string name="pria_wanita">Pria / Wanita</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="birthday">BirthDay</string>
    <string name="_08_march_1997">08 March 1997</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">0896********</string>
    <string name="address">Address</string>
    <string name="address_hint">Street address</string>
    <string name="identity_card_number_ktp">Identity Card Number (KTP)</string>
    <string name="save">Save</string>
    <string name="profile_image">profile image</string>
    <string name="edit_icon">edit icon</string>
    <string name="edit_profile">edit profile</string>
    <string name="wahyu_kurniawan">Wahyu Kurniawan</string>
    <string name="wahyukurniawan_gmail_com">wahyukurniawan@gmail.com</string>
    <string name="my_phone_number">089630033462</string>
    <string name="github">Github</string>
    <string name="_0">0</string>
    <string name="name">name</string>
    <string name="image_view_project">image view project</string>
    <string name="logout">Logout</string>
    <string name="input_a_string">input a string</string>
    <string name="date_time_hint">01-10-2020 12:00</string>
    <string name="test_room">Test Room</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>
    <string name="login_with_api">Login With API</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">Enter full name</string>
    <string name="role_account">Role Account</string>
    <string name="enter_password">Enter Password</string>
    <string name="job_title">Job Title</string>
    <string name="note_title">Note Title</string>
    <string name="enter_note_title">Enter note title</string>
    <string name="note_body">Note Body</string>
    <string name="enter_note_body">Enter note body</string>
    <string name="add">Add</string>
    <string name="search_shorting_menu">Search shorting menu</string>
    <string name="search_value">Search value</string>
    <string name="notification_no_search_result">Notification no search result</string>
    <string name="no_search_result">No Search Result</string>
    <string name="choose_a_sort_method">Choose a sort method</string>
    <string name="search">Search</string>
    <string name="location_image">Location Image</string>
    <string name="city">City</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="company">Company</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="role_job">Role Job</string>
    <string name="enter_role_job_in_the_company">Enter Role Job In The Company</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linkedin</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="company_field">Company Field</string>
    <string name="enter_your_company_field">Enter your company field</string>
    <string name="enter_your_city_address">Enter your City Address</string>
    <string name="enter_your_description">Enter your description</string>
    <string name="instagram_link">Instagram Link</string>
    <string name="linkedin_link">Linkedin Link</string>
    <string name="hire">Hire</string>
    <string name="skill">Skill</string>
    <string name="list_skill">List Skill</string>
    <string name="status_job">Status Job</string>
    <string name="portofolio">Portofolio</string>
    <string name="work_experience">Work Experience</string>
    <string name="contact_name">Contact Name</string>
    <string name="select_project_to_offer">Select Project To Offer</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="offered_to">Offered To :</string>
    <string name="job_seeker_name">Job Seeker Name</string>
    <string name="project_icon">Project Icon</string>
    <string name="there_are_no_offers_yet">There Are No Offers Yet</string>
    <string name="there_are_no_project_yet">There Are No Project Yet</string>
    <string name="floating_button_add">Floating Button Add</string>
    <string name="project_name">Project Name</string>
    <string name="enter_project_name">Enter project name</string>
    <string name="project_description">Project Description</string>
    <string name="enter_project_description">Enter project description</string>
    <string name="project_price">Project Price</string>
    <string name="enter_project_price_idr">Enter project price ( IDR )</string>
    <string name="project_duration">Project Duration</string>
    <string name="enter_project_duration_ex_6_month">Enter project duration (ex: 6 month)</string>
    <string name="status">Status :</string>
    <string name="status_info">Status Info</string>
    <string name="waiting_for_response">Waiting for response</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>

    <string-array name="role_accounts">
        <item>recruiter</item>
        <item>job seeker</item>
    </string-array>

    <string-array name="job_titles">
        <item>Android Developer</item>
        <item>Web Developer</item>
    </string-array>

    <string-array name="sort_methods">
        <item>Sort By Name</item>
        <item>Sort By Skill</item>
        <item>Sort By Location</item>
        <item>Sort By Job Title</item>
        <item>Sort By Status Job</item>
    </string-array>
</resources>