<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_faq"
        android:icon="@drawable/ic_round_loop_for_faq"
        android:title="@string/faq" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_round_help_24"
        android:title="@string/help" />

    <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/ic_font_download_for_about_clip"
        android:title="@string/about_us" />

    <item
        android:id="@+id/nav_test_room"
        android:icon="@drawable/ic_exit"
        android:title="@string/test_room" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit"
        android:title="@string/logout" />

</menu>